// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Separator > renders with as correctly 1`] = `"<span data-orientation="horizontal" role="separator" data-slot="separator" class="flex items-center text-center [--ui-accent:var(--ui-neutral)] w-full flex-row [--ui-control-thickness:1px]"><!--v-if--><div data-slot="separator-border" class="border-accent-default w-full border-t-(length:--ui-control-thickness) border-solid"></div><!--v-if--><!--v-if--></span>"`;

exports[`Separator > renders with avatar correctly 1`] = `
"<div data-orientation="horizontal" role="separator" data-slot="separator" class="flex items-center text-center [--ui-accent:var(--ui-neutral)] w-full flex-row [--ui-control-thickness:1px]">
  <!--v-if-->
  <div data-slot="separator-border" class="border-accent-default w-full border-t-(length:--ui-control-thickness) border-solid"></div>
  <div data-slot="separator-container" class="font-medium text-default flex whitespace-nowrap mx-3"><span data-slot="separator-avatar" class="inline-flex items-center justify-center select-none rounded-full align-middle bg-accent-soft [--ui-accent:var(--ui-neutral)] size-5 text-[10px] shrink-0"><img src="https://github.com/benjamincanac.png" width="20" height="20" data-slot="avatar-image" class="h-full w-full rounded-[inherit] object-cover"></span></div>
  <div data-slot="separator-border" class="border-accent-default w-full border-t-(length:--ui-control-thickness) border-solid"></div>
  <!--v-if-->
</div>"
`;

exports[`Separator > renders with class correctly 1`] = `
"<div data-orientation="horizontal" role="separator" data-slot="separator" class="flex items-center text-center [--ui-accent:var(--ui-neutral)] w-full [--ui-control-thickness:1px] flex-row-reverse">
  <!--v-if-->
  <div data-slot="separator-border" class="border-accent-default w-full border-t-(length:--ui-control-thickness) border-solid"></div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`Separator > renders with color primary correctly 1`] = `
"<div data-orientation="horizontal" role="separator" data-slot="separator" class="flex items-center text-center [--ui-accent:var(--ui-primary)] w-full flex-row [--ui-control-thickness:1px]">
  <!--v-if-->
  <div data-slot="separator-border" class="border-accent-default w-full border-t-(length:--ui-control-thickness) border-solid"></div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`Separator > renders with decorative correctly 1`] = `
"<div data-orientation="horizontal" role="none" data-slot="separator" class="flex items-center text-center [--ui-accent:var(--ui-neutral)] w-full flex-row [--ui-control-thickness:1px]">
  <!--v-if-->
  <div data-slot="separator-border" class="border-accent-default w-full border-t-(length:--ui-control-thickness) border-solid"></div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`Separator > renders with icon correctly 1`] = `
"<div data-orientation="horizontal" role="separator" data-slot="separator" class="flex items-center text-center [--ui-accent:var(--ui-neutral)] w-full flex-row [--ui-control-thickness:1px]">
  <!--v-if-->
  <div data-slot="separator-border" class="border-accent-default w-full border-t-(length:--ui-control-thickness) border-solid"></div>
  <div data-slot="separator-container" class="font-medium text-default flex whitespace-nowrap mx-3"><span class="iconify i-lucide:image shrink-0 size-5" aria-hidden="true" data-slot="separator-icon"></span></div>
  <div data-slot="separator-border" class="border-accent-default w-full border-t-(length:--ui-control-thickness) border-solid"></div>
  <!--v-if-->
</div>"
`;

exports[`Separator > renders with label correctly 1`] = `
"<div data-orientation="horizontal" role="separator" data-slot="separator" class="flex items-center text-center [--ui-accent:var(--ui-neutral)] w-full flex-row [--ui-control-thickness:1px]">
  <!--v-if-->
  <div data-slot="separator-border" class="border-accent-default w-full border-t-(length:--ui-control-thickness) border-solid"></div>
  <div data-slot="separator-container" class="font-medium text-default flex whitespace-nowrap mx-3"><span data-slot="separator-label" class="text-sm">+1</span></div>
  <div data-slot="separator-border" class="border-accent-default w-full border-t-(length:--ui-control-thickness) border-solid"></div>
  <!--v-if-->
</div>"
`;

exports[`Separator > renders with orientation vertical correctly 1`] = `
"<div data-orientation="vertical" aria-orientation="vertical" role="separator" data-slot="separator" class="flex items-center text-center [--ui-accent:var(--ui-neutral)] h-full flex-col [--ui-control-thickness:1px]">
  <!--v-if-->
  <div data-slot="separator-border" class="border-accent-default h-full border-s-(length:--ui-control-thickness) border-solid"></div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`Separator > renders with position end correctly 1`] = `
"<div data-orientation="horizontal" role="separator" data-slot="separator" class="flex items-center text-center [--ui-accent:var(--ui-neutral)] w-full flex-row [--ui-control-thickness:1px]">
  <!--v-if-->
  <div data-slot="separator-border" class="border-accent-default w-full border-t-(length:--ui-control-thickness) border-solid"></div>
  <!--v-if-->
  <div data-slot="separator-container" class="font-medium text-default flex whitespace-nowrap ms-3"><span class="iconify i-lucide:image shrink-0 size-5" aria-hidden="true" data-slot="separator-icon"></span></div>
</div>"
`;

exports[`Separator > renders with position start correctly 1`] = `
"<div data-orientation="horizontal" role="separator" data-slot="separator" class="flex items-center text-center [--ui-accent:var(--ui-neutral)] w-full flex-row [--ui-control-thickness:1px]">
  <div data-slot="separator-container" class="font-medium text-default flex whitespace-nowrap me-3"><span class="iconify i-lucide:image shrink-0 size-5" aria-hidden="true" data-slot="separator-icon"></span></div>
  <div data-slot="separator-border" class="border-accent-default w-full border-t-(length:--ui-control-thickness) border-solid"></div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`Separator > renders with size lg correctly 1`] = `
"<div data-orientation="horizontal" role="separator" data-slot="separator" class="flex items-center text-center [--ui-accent:var(--ui-neutral)] w-full flex-row [--ui-control-thickness:4px]">
  <!--v-if-->
  <div data-slot="separator-border" class="border-accent-default w-full border-t-(length:--ui-control-thickness) border-solid"></div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`Separator > renders with size md correctly 1`] = `
"<div data-orientation="horizontal" role="separator" data-slot="separator" class="flex items-center text-center [--ui-accent:var(--ui-neutral)] w-full flex-row [--ui-control-thickness:3px]">
  <!--v-if-->
  <div data-slot="separator-border" class="border-accent-default w-full border-t-(length:--ui-control-thickness) border-solid"></div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`Separator > renders with size sm correctly 1`] = `
"<div data-orientation="horizontal" role="separator" data-slot="separator" class="flex items-center text-center [--ui-accent:var(--ui-neutral)] w-full flex-row [--ui-control-thickness:2px]">
  <!--v-if-->
  <div data-slot="separator-border" class="border-accent-default w-full border-t-(length:--ui-control-thickness) border-solid"></div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`Separator > renders with size xl correctly 1`] = `
"<div data-orientation="horizontal" role="separator" data-slot="separator" class="flex items-center text-center [--ui-accent:var(--ui-neutral)] w-full flex-row [--ui-control-thickness:5px]">
  <!--v-if-->
  <div data-slot="separator-border" class="border-accent-default w-full border-t-(length:--ui-control-thickness) border-solid"></div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`Separator > renders with size xs correctly 1`] = `
"<div data-orientation="horizontal" role="separator" data-slot="separator" class="flex items-center text-center [--ui-accent:var(--ui-neutral)] w-full flex-row [--ui-control-thickness:1px]">
  <!--v-if-->
  <div data-slot="separator-border" class="border-accent-default w-full border-t-(length:--ui-control-thickness) border-solid"></div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`Separator > renders with type dashed correctly 1`] = `
"<div data-orientation="horizontal" role="separator" data-slot="separator" class="flex items-center text-center [--ui-accent:var(--ui-neutral)] w-full flex-row [--ui-control-thickness:1px]">
  <!--v-if-->
  <div data-slot="separator-border" class="border-accent-default w-full border-t-(length:--ui-control-thickness) border-dashed"></div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`Separator > renders with type dotted correctly 1`] = `
"<div data-orientation="horizontal" role="separator" data-slot="separator" class="flex items-center text-center [--ui-accent:var(--ui-neutral)] w-full flex-row [--ui-control-thickness:1px]">
  <!--v-if-->
  <div data-slot="separator-border" class="border-accent-default w-full border-t-(length:--ui-control-thickness) border-dotted"></div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`Separator > renders with type solid correctly 1`] = `
"<div data-orientation="horizontal" role="separator" data-slot="separator" class="flex items-center text-center [--ui-accent:var(--ui-neutral)] w-full flex-row [--ui-control-thickness:1px]">
  <!--v-if-->
  <div data-slot="separator-border" class="border-accent-default w-full border-t-(length:--ui-control-thickness) border-solid"></div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;

exports[`Separator > renders with ui correctly 1`] = `
"<div data-orientation="horizontal" role="separator" data-slot="separator" class="flex items-center text-center [--ui-accent:var(--ui-neutral)] w-full flex-row [--ui-control-thickness:1px]">
  <!--v-if-->
  <div data-slot="separator-border" class="border-accent-default w-full border-t-(length:--ui-control-thickness) border-solid"></div>
  <!--v-if-->
  <!--v-if-->
</div>"
`;
